Fix navigation spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,6 +203,7 @@ img {
     .navbar {
         display:flex;
         flex-flow: row wrap;
+        justify-content: space-between;
     }
     .navbar-toggler {
         display: none;
@@ -216,7 +217,7 @@ img {
     .navbar-nav {
         display: flex;
         flex-flow: row nowrap;
-        justify-content: space-around;
+        justify-content: space-evenly;
         align-items: flex-end;
         align-content: flex-end;
     }
